# uptime-forge

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  build.rs  compose.dev.yml  compose.yml  flake.nix  forge.toml  justfile  lefthook.yml  release.sh
.github/workflows/: ci.yml  codeql.yml  release.yml
docker/postgres/: Dockerfile  postgresql.conf
docker/postgres/initdb/: 001-timescaledb.sql
example/: compose.yml  forge.toml
migrations/: 0002_uptime_events.down.sql  0002_uptime_events.up.sql
src/: checker.rs  config.rs  db.rs  layout.rs  main.rs
src/public/css/: input.css  output.css  style.css
todos/: database-schema.md
